plugins {
    id 'org.jetbrains.intellij' version '1.4.0'
    id 'java'
}

group 'com.joker'
version '1.0.3'

tasks.withType(JavaCompile) {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
    options.encoding = 'UTF-8'
    options.warnings = false
}

repositories {
    mavenCentral()
}

intellij {
    plugins = ['com.intellij.java']
    version = '2021.3'
    type = 'IU'
    downloadSources = true
    updateSinceUntilBuild = false
}

test {
    useJUnitPlatform()
}

dependencies {
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED', '-Dfile.encoding=utf-8'
}